<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.sersh_perm.helloworld.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextHello"
        android:id="@+id/buttonHello"
        android:onClick="onClick"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/buttonHello"
        android:layout_alignRight="@+id/buttonHello"
        android:layout_alignEnd="@+id/buttonHello"
        android:layout_marginRight="41dp"
        android:layout_marginEnd="41dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textCounterCrows"
        android:id="@+id/buttonCrowsCounter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView"
        android:singleLine="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textCounterCat"
        android:id="@+id/button"
        android:layout_below="@+id/buttonCrowsCounter"
        android:onClick="onClickCounterCat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAbout"
        android:id="@+id/buttonAbout"
        android:nestedScrollingEnabled="false"
        android:onClick="onClickAbout"
        android:layout_alignTop="@+id/buttonHello"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textButtonSA"
        android:id="@+id/buttonSecondActivity"
        android:onClick="onClickSecondActivity"
        android:layout_below="@+id/editTextOpisanie"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textTransferData"
        android:id="@+id/textView2"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/buttonSecondActivity"
        android:layout_alignStart="@+id/buttonSecondActivity"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Кому"
        android:id="@+id/textViewKomu"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextKomu"
        android:layout_below="@+id/textViewKomu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Описание"
        android:id="@+id/textViewOpisanie"
        android:layout_below="@+id/editTextKomu"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextOpisanie"
        android:layout_below="@+id/textViewOpisanie"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
